Fix responsiveness and whitespace below page on firefox

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,25 +1,34 @@
+@import url('https://fonts.googleapis.com/css?family=Courgette|Droid+Serif|Lobster+Two');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css');
+
+/* Structure */
+
 html, body {
-    height: 100%;
-    min-height: 18em;
-    overflow: hidden;
+    font-size: 14pt;
+    padding-bottom: -20px!important;
+    margin-bottom: -20px!important;
+}
+
+@media only screen and (max-width: 600px){
+  html{
+      font-size: 8pt;
+  }
 }
 
 #front-end{
-    float: left;
     min-height: 100vh;
     background: -webkit-linear-gradient(top left,
-    rgba(171, 71, 188, 0.25),
+    rgba(171, 71, 188, 0.5),
     rgba(171, 71, 188, 0.9)
     ), url('../images/frontend.png');
     background: linear-gradient(to bottom right,
-    rgba(171, 71, 188, 0.25),
+    rgba(171, 71, 188, 0.5),
     rgba(171, 71, 188, 0.9)
     ), url('../images/frontend.png');
-    background-size:cover;
+    background-size: auto 100%;
 }
 
 #back-end{
-    float: right;
     min-height: 100vh;
     background: -webkit-linear-gradient(top right,
     rgba(84, 110, 122, 0.25),
@@ -29,14 +38,18 @@ html, body {
     rgba(84, 110, 122, 0.25),
     rgba(84, 110, 122, 0.9)
     ), url('../images/frontend.png');
+    background-size: auto 100%;
 }
 
+/* TYPOGRAPHY */
+
 h1{
+    font-size: 5rem;
     text-shadow: 0 1px 0 #ccc,
-    0 2px 0 #c9c9c9,
-    0 3px 0 #bbb,
-    0 4px 0 #b9b9b9,
-    0 5px 0 #aaa,
+    0 2px 0 #858585,
+    0 3px 0 #777,
+    0 4px 0 #757575,
+    0 5px 0 #333,
     0 6px 1px rgba(0,0,0,.1),
     0 0 5px rgba(0,0,0,.1),
     0 1px 3px rgba(0,0,0,.3),
@@ -44,4 +57,37 @@ h1{
     0 5px 10px rgba(0,0,0,.25),
     0 10px 10px rgba(0,0,0,.2),
     0 20px 20px rgba(0,0,0,.15);
+}
+
+
+#front-end h1{
+  font-family: 'Courgette','Lobster Two', serif;
+}
+
+#back-end h1{
+  font-family: 'Droid serif', serif;
+}
+
+section[id] i{
+  margin-right: 15px
+}
+
+section[id] div{
+  margin: auto
+}
+
+/* FONT AWESOME TWEAK */
+
+.fa{
+  vertical-align: middle!important;
+}
+
+/* TRANSITION ON HOVER */
+.fa, .btn-text{
+  -webkit-transition: color 1000ms ease;
+  transition: color 1000ms ease;
+}
+
+section[id] a.button:hover{
+  color: #ea80fc
 }
